--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "build": "npm install && npm run lint && npm run test"
+    "build": "npm install && npm run lint && npm run test",
+    "lint": "eslint ."
   },
   "author": "ayush",
   "license": "ISC",
